Replace to JPA methods in BookingRepository